<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bookbackground">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="@color/text"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter your book name"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Release year"
        android:textColor="@color/text"
        />

    <EditText
        android:id="@+id/release_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="year/mm/dd"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pages"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter page amount"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Author"
            android:textColor="@color/text" />

        <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter author's name"/>

        <TextView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cover"
        android:textColor="@color/text"/>
    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Hard" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Soft" />
    </RadioGroup>
    <TextView
        android:id="@+id/Genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Genre"
        android:textColor="@color/text"/>
    <CheckBox
        android:id="@+id/check1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Documentary" />

    <CheckBox
        android:id="@+id/check2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Romance" />

    <CheckBox
        android:id="@+id/check3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Action" />

    <CheckBox
        android:id="@+id/check4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="History" />
    <TextView
        android:id="@+id/rarity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rarity"
        android:textColor="@color/text"/>
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rarity_array"
        />

    <Button
        android:id="@+id/prideti1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:background="@drawable/my_button_bg"
        android:textColor="@color/text"/>
        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="update"
            android:background="@drawable/my_button_bg"
            android:textColor="@color/text"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="delete"
            android:background="@drawable/my_button_bg"
            android:textColor="@color/text"/>


    </LinearLayout>
</ScrollView>