

<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bookbackground"
tools:showIn="@layout/activity_dashboard_activity"
tools:context=".View.Dashboard_activity">

    <Button
        android:id="@+id/prideti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add"
        android:layout_below="@id/recycler_view"
        android:textColor="@color/text"
        android:background="@drawable/my_button_bg"/>
<android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:paddingTop="10dp"
    android:layout_weight="1"
    android:textColor="@color/text"
    />


</RelativeLayout>